[package]
name = "org-ai-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time", "process", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring", "logging"] }
webpki-roots = "1"
tower-http = { version = "0.6.11", features = ["trace"] }
toml_edit = "0.22"
base64 = "0.22"
sha2 = "0.10"
twox-hash = "1.6"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
prost = "0.13"
flate2 = "1"
